mongodb/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: adminer-mongodb-redirect-slash
  namespace: mongodb
spec:
  redirectRegex:
    regex: ^https?://([^/]+)/adminer-mongodb$
    replacement: https://$1/adminer-mongodb/
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: adminer-mongodb-strip-prefix
  namespace: mongodb
spec:
  stripPrefix:
    prefixes:
      - /adminer-mongodb
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: adminer-mongodb-iframe-sameorigin
  namespace: mongodb
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: SAMEORIGIN
